Fix: Remove table-layout: fixed from CSS for pane tables
Suspect this is legacy from when it was two columns. Now just a single
column so redundant and causing scrollbar to appear sometimes

DD-2765

--- a/css/common.scss
+++ b/css/common.scss
@@ -213,8 +213,6 @@ div.dtsp-searchPane {
 			}
 
 			table {
-				table-layout: fixed;
-
 				tr > th,
 				tr > td{
 					padding: 5px 10px;
